<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eduard.mindummy.Dock">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dock"
            android:textColor="@color/blanc" />
    </android.support.v7.widget.Toolbar>

    <RadioGroup
        android:id="@+id/options0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain">

        <RadioButton
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <RadioButton
            android:id="@+id/opt01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt1" />

        <RadioButton
            android:id="@+id/opt02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt2" />

        <RadioButton
            android:id="@+id/opt03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt3" />

        <RadioButton
            android:id="@+id/opt04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt4" />
        <RadioButton
            android:id="@+id/opt05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt5" />
    </RadioGroup>

    <Button
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options0"/>

    <Button
        android:id="@+id/saveOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loadOff"
        app:layout_constraintTop_toBottomOf="@+id/filter"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/loadOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/load"
        app:layout_constraintEnd_toStartOf="@+id/saveOff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter"
        android:layout_marginRight="8dp" />


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveOff">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/taskDock_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add"
            android:tint="@color/blanc"
            app:layout_anchor="@id/taskDock_items"
            app:layout_anchorGravity="bottom|right|end" />

    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>
